Notebook description and logic fix

--- a/Cartoon_Characters.ipynb
+++ b/Cartoon_Characters.ipynb
@@ -138,7 +138,7 @@
         "id": "iFXnlWuu7aZk"
       },
       "source": [
-        "Notice that the original dataset does not define a validation set, you have to split it yourself. Split the training set into a training and validation set. Make sure in the validation set the classes have a similar distribution to the training set. [1p]\n"
+        "Notice that the original dataset does not define a validation set, you have to split it yourself. Split the training set into a training and validation set. Make sure in the validation set the classes have a similar distribution to the training set."
       ]
     },
     {
@@ -186,7 +186,7 @@
         "id": "wCn3biHb782K"
       },
       "source": [
-        "Now that you have set up the dataset, it's time to look at some of the images. Create a function that randomly selects 4 images from a class and shows them. [1p]"
+        "Now that you have set up the dataset, it's time to look at some of the images. Create a function that randomly selects 4 images from a class and shows them."
       ]
     },
     {
@@ -257,7 +257,7 @@
       "source": [
         "First, you should normalize the data. Apply a normalisation method of your choice that brings the data around 0, to the scale of 0-1.\n",
         "\n",
-        "Note: you may want to convert the datatype of `x_train` and `x_test` to float32 instead of the original uint8. Fractional values are not representable with a `uint8` datatype. [2p]"
+        "Note: you may want to convert the datatype of `x_train` and `x_test` to float32 instead of the original uint8. Fractional values are not representable with a `uint8` datatype."
       ]
     },
     {
@@ -361,10 +361,10 @@
         "\n",
         "All layers have ReLU activations. \n",
         "\n",
-        "How many parameters does this network have? [2p]  \n",
+        "How many parameters does this network have? \n",
         "**Total Parameters are: 322,146, as you can see in Model Summary.**\n",
         "\n",
-        "Now train the network for 50 epochs. [6p]"
+        "Now train the network for 50 epochs."
       ]
     },
     {
@@ -570,7 +570,7 @@
         "id": "0cACO2vD8q8Y"
       },
       "source": [
-        "Now that the model has finished training, plot the accuracy and loss over time, both for the training and the validation data [1p]:"
+        "Now that the model has finished training, plot the accuracy and loss over time, both for the training and the validation data:"
       ]
     },
     {
@@ -632,7 +632,7 @@
         "id": "3hSkr8Aq8rcz"
       },
       "source": [
-        "How did the loss and accuracy curves change over time? What does it mean regarding the training process (i.e. overfit, underfit, etc.)? Is that a problem and how would you solve it? [3p]\n",
+        "How did the loss and accuracy curves change over time? What does it mean regarding the training process (i.e. overfit, underfit, etc.)? Is that a problem and how would you solve it?\n",
         "\n",
         "**The Loss and Accuracy are Improving with time for Training Data but for Validation Data they are not improving, which means the Model is Overfitting and this is a problem.** \n",
         "\n",
@@ -645,7 +645,7 @@
         "id": "hOWb1-kh84M1"
       },
       "source": [
-        "Finally, calculate the performance of your model on the test set [1p]:"
+        "Finally, calculate the performance of your model on the test set:"
       ]
     },
     {
@@ -682,7 +682,7 @@
       "source": [
         "## Improving the method\n",
         "\n",
-        "Add augmentations to the model, and retrain the network! Plot the training curves as well. [4p]"
+        "Add augmentations to the model, and retrain the network! Plot the training curves as well."
       ]
     },
     {
@@ -983,7 +983,7 @@
       "source": [
         "## Conclusions\n",
         "\n",
-        "You have trianed two models (one with augmentations and one without any). Compare their results. Write a couple of sentences which one would you choose and why. [3p]\n",
+        "You have trianed two models (one with augmentations and one without any). Compare their results. Write a couple of sentences which one would you choose and why.\n",
         "\n",
         "**The first model without any Augmentation is overfitting on a very high scale and the gap between Training and Validation Accuracies and Loss is very high. While The second model with Augmentation is not Overfitting since the Gap between Training and Validation Accuracies and Loss is negligible and the second model is generalizing instead of Overfitting.**\n",
         "\n",
